# pyproject.toml
[project]
name = "patching_ray"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ray[data]>=2.44.1",
    "ruff>=0.11.5",
]

[tool.ruff]
line-length = 150
target-version = "py38"
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    "venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E226"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["patching_ray*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
